# mag-PL-detector-ROS2-pkg

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  pl_positions_computer.cpp
config/: params.yaml
launch/: physical_setup.launch.py  powerline_detection.launch.py
msg/: MagMeasurement.msg  MagMeasurements.msg  MagneticPhasor.msg  MagneticPhasor3D.msg  MagneticPhasors3D.msg  PowerlinePosesComputationResult.msg  SineReconstruction.msg
rviz/: config.rviz
scripts/: image_drawer.py  save_mag_measurements.py
src/: cyclic_buffer.h  gain_computer.cpp  gain_computer.h  gain_controller.cpp  gain_controller.h  geometry.h  mag_measurements_class.cpp  mag_measurements_class.h  mag_sample_file_publisher.cpp  mag_sample_file_publisher.h  mag_sample_publisher.cpp  mag_sample_publisher.h  pl_dir_computer.cpp  pl_dir_computer.h  pl_dir_estimator.cpp  pl_dir_estimator.h  pl_positions_computer.cpp  pl_positions_computer.h  pl_positions_estimator.cpp  pl_positions_estimator.h  sample_frequency_controller.cpp  sample_frequency_controller.h  sine_reconstruction_publisher.cpp  sine_reconstruction_publisher.h  sine_reconstructor.cpp  sine_reconstructor.h
